# telecom-intelligent-ml-platform

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
config/: dashboard_config.yaml  model_config.yaml  spark_config.yaml
models/: anomaly_model.pkl  anomaly_scaler.pkl  churn_model.pkl  churn_scaler.pkl  forecast_model.pkl
notebooks/: 01_process_raw_to_processed.ipynb  02_create_features.ipynb  03_eda_analysis.ipynb  04_model_churn_prediction.ipynb  05_model_anomaly_detection.ipynb  06_model_forecasting.ipynb
scripts/: generate_data.py  launch_dashboard.sh  process_all_data.py  run_pipeline.sh
src/: anomaly_model_utils.py  churn_model_utils.py  dashboard_app.py  forecasting_model_utils.py
