[project]
name = "telecom-intelligent-ml-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "danieljames96",email = "danieljames96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pyspark (>=3.5.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
